--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -12,12 +12,14 @@
 
 .title {
   margin: 0;
+  margin-left: -2rem;
   font-weight: 300;
   font-size: 110%;
   letter-spacing: 1.5px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 
   @include atSmall {
+    margin-left: 0;
     text-align: center;
     font-size: 140%;
   }
@@ -29,6 +31,7 @@
 
 .streak {
   margin: 0;
+  margin-right: -2rem;
   font-weight: 300;
   font-size: 110%;
   letter-spacing: 1.5px;
@@ -40,6 +43,7 @@
   }
 
   @include atMedium {
+    margin-right: 0;
     font-size: 170%;
   }
 }
