fixed a bug with lower and upper case inconsistencies

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ block content
   .game
     .wrapper
       header.header
-        a.button.button__info.link(href='info.html') Game Info
+        a.button.button__info.link(href='/info') Game Info
         h1.title Note-Learning Game
         h1.streak
           | Streak: 
@@ -27,13 +27,13 @@ block content
         div
           h1.task-text.task1 Pick a Note:
           ul.note-buttons
-            li.button(data-note='C') C
-            li.button(data-note='D') D
-            li.button(data-note='E') E
-            li.button(data-note='F') F
-            li.button(data-note='G') G
-            li.button(data-note='A') A
-            li.button(data-note='B') B
+            li.button(data-note='c') C
+            li.button(data-note='d') D
+            li.button(data-note='e') E
+            li.button(data-note='f') F
+            li.button(data-note='g') G
+            li.button(data-note='a') A
+            li.button(data-note='b') B
           h1.task-text.task4.task-text--one-octave or a Key
       div
         ul.octave
