added hover effects to keys

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html(lang="en")
     link(rel='stylesheet', href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css")
     link(rel='stylesheet', href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700")
     link(rel='stylesheet', href="/css/main.css" )
-    link(rel="icon", type="image/png", href="/images/logo.png")
+    link(rel="icon", type="image/png", href="/images/favicon.ico")
     title Note-Learning Game
   body
   block content
