--- a/scss/modules/_keyboard.scss
+++ b/scss/modules/_keyboard.scss
@@ -1,19 +1,3 @@
-//   @include atMedium {
-//     display: block;
-//     width: 98%;
-//     position: absolute;
-//     bottom: 15vh;
-//     left: 1%;
-//     cursor: pointer;
-//   }
-
-//   @include atLarge {
-//     width: 97%;
-//     bottom: 15vh;
-//     left: 1.5%;
-//   }
-// }
-
 .keyboard-keys {
   display: none;
 
@@ -45,6 +29,14 @@
   position: relative;
   // float: left;
   cursor: pointer;
+}
+
+.key.white:hover {
+  background: darken(#fefefe, 3%);
+}
+
+.key.black:hover {
+  background: linear-gradient(45deg, #111 0%, #444 100%);
 }
 
 .white {
