--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,4 @@
 @import './modules/_game-buttons';
 @import './modules/_game-notes';
 @import './modules/_keyboard';
+@import './modules/_info.scss';
