--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,5 +13,10 @@ html(lang="en")
   body
   block content
   block foot
+  footer
+    p.footer
+      | Copyright ©
+      span.year
+      |  IC
     script(src="https://code.jquery.com/jquery-3.3.1.min.js")
     script(src="/js/main.js")
