--- a/scss/modules/_game-nav-buttons.scss
+++ b/scss/modules/_game-nav-buttons.scss
@@ -167,7 +167,7 @@ ul.clef {
   right: 6%;
   a {
     text-decoration: none;
-    color: #fff;
+    color: #fafafa;
   }
 
   @include atSmall {
@@ -195,7 +195,7 @@ ul.clef {
   color: #333;
 
   @include atSmall {
-    color: #fff;
+    color: #fafafa;
   }
 }
 
