--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -55,8 +55,8 @@ div.warning-message {
 }
 
 .game {
+  height: 97vh;
   overflow: hidden;
-
   @media screen and (min-width: 320px) and (max-width: 740px) and (max-height: 600px) and (orientation: landscape) {
     div.wrapper {
       display: none;
@@ -70,29 +70,28 @@ div.warning-message {
   }
 }
 
-// div.game {
-//   display: flex;
-//   flex-direction: column;
-// }
+.wrapper {
+  overflow: hidden;
+  height: 98vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .footer {
+  margin-bottom: 0.5rem;
+  margin-top: 0.4rem;
   display: block;
   font-size: 65%;
   font-size: 65%;
   color: #888;
   text-align: center;
-  margin-top: 4rem;
 
   @include atSmall {
     font-size: 70%;
-    margin-top: 2rem;
   }
 
   @include atMedium {
-    margin-top: 1.5rem;
-    font-size: 75%;
-  }
-
-  @include atLarge {
-    margin-top: 1rem;
+    font-size: 70%;
   }
 }
