--- a/views/info.pug
+++ b/views/info.pug
@@ -55,7 +55,7 @@ block content
         h1 Registers
         p
           | In order to determine which note corresponds with a particular pitch, it is not enought to just now the letter name. You also have to know which octave register it belongs to.
-          | There are seven full registers in modern music notation.  Each registars starts with C.  All of the notes between C1 and C2 are in the first register. The same pattern is applied the rest of the registers.
+          | There are seven full registers in modern music notation.  Each register starts with C.  All of the notes between C1 and C2 are in the first register. The same pattern is applied the rest of the registers.
           | In the examples bellow, you can see what it looks like on the piano keyboard as well as on the staff.  8va (octava) bellow the staff is used to notate the notes that are one octave bellow.  8va and 15ma (quindicesima) above the staff
           | are used to notate the notes that are one and two octaves above.
         img.keyboard-registers(src='/images/keyboard-registers.jpg', alt='keyboard-registers')
