--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel='stylesheet' href="https://use.fontawesome.com/releases/v5.0.10/css/all.css")
     link(rel='stylesheet', href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css")
     link(rel='stylesheet', href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700")
-    link(rel='stylesheet', href="/css/main.css" )
+    link(rel='stylesheet', type="text/css" href="./css/main.css" )
     link(rel="icon", type="image/png", href="/images/favicon.ico")
     title Note-Learning Game
   body
@@ -19,4 +19,4 @@ html(lang="en")
       span.year
       |  IC
     script(src="https://code.jquery.com/jquery-3.3.1.min.js")
-    script(src="/js/main.js")
+    script(src="./js/main.js")
