--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,6 +11,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
   background-color: $bgcolor;
+  //background-image: url('../images/music-bg.jpg');
   color: $color;
 }
 
