--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,11 +21,11 @@ h2 {
   background-color: rgba(180, 191, 191, 0.9);
   text-align: center;
   border-radius: 15%;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: 0.2s ease-out; }
 
 @media (min-width: 530px) {
   .button:hover {
-    transition: 0.2s ease-out;
     transform: scale(1.05); } }
 
 li {
